# FaceCept3D

./: .gitignore  LICENSE  README.md
FaceCept3D/HeadPoseEstimationFramework/: CMakeLists.txt  Common.h  HeadPoseEstimationFramework.vcxproj  Landmarks.h
FaceCept3D/HeadPoseEstimationFramework/Align/: CloudMapper.cpp  CloudMapper.h  IHeadTemplateCreator.h  IncrementalHeadTemplateCreator.cpp  IncrementalHeadTemplateCreator.h  TransformationEstimationHPE.cpp  TransformationEstimationHPE.h
FaceCept3D/HeadPoseEstimationFramework/Converter/: IDataConverter.h  KinectDataConverter.cpp  KinectDataConverter.h
FaceCept3D/HeadPoseEstimationFramework/DataFilter/: IDataFilter.h
FaceCept3D/HeadPoseEstimationFramework/DataObject/: CloudXYZRGBA.h  HeadPoseInfo.h  IDataObject.h  IDataStorage.h  LandmarksObject.h  MapDataStorage.cpp  MapDataStorage.h  RawFrames.h
FaceCept3D/HeadPoseEstimationFramework/Exception/: HPEException.cpp  HPEException.h
FaceCept3D/HeadPoseEstimationFramework/FacialExpressions/: ferLocalFunctions.cpp  ferLocalFunctions.h
FaceCept3D/HeadPoseEstimationFramework/Features/: IFeature.h
FaceCept3D/HeadPoseEstimationFramework/Filter/: BoxFilter.h  CenteredBoxFilter.h  FilteringQueue.h  Filters.h  FunctorFilter.h  ICenterCloudFilter.h  ICloudFilter.h  MovingLeastSquaresFilter.h
FaceCept3D/HeadPoseEstimationFramework/Grabber/: GrabberBase.cpp  GrabberBase.h  OpenNIGrabber.cpp  OpenNIGrabber.h  (+4 more)
FaceCept3D/TemplateCreator/: CMakeLists.txt  TemplateCreator.cpp  TemplateCreator.vcxproj  UIProcessor.cpp  UIProcessor.h  settings.ini  stdafx.cpp  stdafx.h
(+73 files in other folders)
